--- a/projects/graduated/fluentbit.yaml
+++ b/projects/graduated/fluentbit.yaml
@@ -79,4 +79,4 @@ spec:
     securityDocs: "Ryan Garcia, 2 Mar 2022"
 
     # Graduated: Cyber security review and penetration testing
-    cybersecurity: ""
+    cybersecurity: "Gabe Scarberry, 31 Mar 2022"
