Update TOC members

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
 
-CODEOWNERS @abryan562 @phillip.record @matthew.huston @andrew.greene @blakeburkhart @celkins @barakstout1 @tim.gast @anthony.butt @idunbarh @zayd.ma @gabe.scarberry
+CODEOWNERS @phillip.record @matthew.huston @andrew.greene @blake.burkhart @celkins @gabe @barakstout1 @anthony.butt @idunbarh @zayd.ma @camdon.cady @mclamb @jwsterling @david-bl @hsharma
 
 **/* @root
 
