--- a/projects/incubating/twistlock.yaml
+++ b/projects/incubating/twistlock.yaml
@@ -84,4 +84,4 @@ spec:
     securityDocs: "Thomas Runyon, 29 Jan 2022"
 
     # Graduated: Cyber security review and penetration testing
-    cybersecurity: ""
+    cybersecurity: "Gabe Scarberry, 13 May 2022"
