--- a/projects/graduated/twistlock.yaml
+++ b/projects/graduated/twistlock.yaml
@@ -27,7 +27,7 @@ metadata:
   purpose: "Runtime Security"
 
   # Maturity level of the package
-  maturityLevel: Incubating # Sandbox, Incubating, or Graduated
+  maturityLevel: Graduated # Sandbox, Incubating, or Graduated
 
   # Sandbox: Points of contact for project (at least 2)
   contacts:
