--- a/projects/sandbox/sdelements.yaml
+++ b/projects/sandbox/sdelements.yaml
@@ -66,7 +66,7 @@ spec:
   signOffs:
 
     # Sandbox: Verification of requirements
-    sandboxVerification: ""
+    sandboxVerification: "Michael McLeroy, 15 Nov 2022"
 
     # Incubating: Verification of requirements
     incubatingVerification: ""
