updates from 15 Nov 22 meeting

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
 
-CODEOWNERS @ryan.thompson.44 @celkins @barakstout1 @anthony.butt @idunbarh @camdon.cady @mclamb @david-bl @hsharma
+CODEOWNERS @ryan.thompson.44 @barakstout1 @anthony.butt @idunbarh @camdon.cady @mclamb
 
 **/* @root
 
