--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,7 +1,5 @@
-
-CODEOWNERS @ryan.thompson.44 @barakstout1 @anthony.butt @idunbarh @camdon.cady @mclamb
-
-**/* @root
+# CODEOWNERS
+* @ryan.thompson.44 @barakstout1 @anthony.butt @idunbarh @camdon.cady @mclamb
 
 # Meetings, Agenda, Minutes are owned by the current TOC Chair(s)
-meetings/** @camdon.cady @mclamb
+/meetings/ @camdon.cady @mclamb
