fix: fixed minor linting issue, repo1 link, and completed review/signoff

--- a/projects/getting-started/proposal_template.yaml
+++ b/projects/getting-started/proposal_template.yaml
@@ -39,7 +39,7 @@ spec:
     # Sandbox: Name of the package
   - name: ""
 
-    # Sandbox: Big Bang repository (i.e. https://repo.dso.mil/platform-one/big-bang/apps/sandbox/<your project>)
+    # Sandbox: Big Bang repository (i.e. https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/<your project>)
     repository: ""
 
     # Incubating: List of images contained in the package.
