--- a/projects/graduated/velero.yaml
+++ b/projects/graduated/velero.yaml
@@ -63,10 +63,10 @@ spec:
 
     # Graduated: Links to required documentation
     documentation:
-    # (MISSING) https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/charter/packages
-    - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/charter/BigBangPackages.md#velero
-    - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/understanding-bigbang/licensing-expectations.md
-    - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/guides/prerequisites/minimum-hardware-requirements.md
+    - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/understanding-bigbang/package-architecture/velero.md
+    - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/packages.md#cluster-utilities
+    - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/understanding-bigbang/licensing-model.md
+    - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/prerequisites/minimum-hardware-requirements.md
 
   # Name and date of required verifications (e.g. "John Doe, 7 Dec 2021")
   signOffs:
@@ -78,4 +78,4 @@ spec:
     incubatingVerification: Michael McLeroy, 13 Jul 2022
 
     # Graduated: Verification of requirements
-    graduatedVerification: ""
+    graduatedVerification: Michael McLeroy, 4 Jan 2023
