--- a/projects/graduated/keycloak.yaml
+++ b/projects/graduated/keycloak.yaml
@@ -24,7 +24,7 @@ metadata:
   - Apache 2.0
 
   # Maturity level of the package
-  maturityLevel: Sandbox # Sandbox, Incubating, or Graduated
+  maturityLevel: Graduated # Sandbox, Incubating, or Graduated
 
   # Sandbox: Points of contact for project (at least 2)
   contacts:
@@ -48,22 +48,23 @@ spec:
 
     # Incubating: List of images contained in the package.
     images:
-      # Incubating: Name of the image
       - name: Keycloak
-
-        # Incubating: Iron Bank approval request (https://repo1.dso.mil/dsop/<your project>/-/issues/1)
-        repository: ""  # Not submitted to IB yet due to plugin
-
-        # Graduated: Iron Bank approval URL (https://ironbank.dso.mil/repomap/details;registry1Path=<your project path>)
-        approval: ""
+        repository: https://repo1.dso.mil/dsop/opensource/keycloak/keycloak
+        approval: https://ironbank.dso.mil/repomap/details;registry1Path=opensource%252Fkeycloak%252Fkeycloak
+      - name: Keycloak Legacy
+        repository: https://repo1.dso.mil/dsop/opensource/keycloak/keycloak-legacy
+        approval: https://ironbank.dso.mil/repomap/details;registry1Path=opensource%252Fkeycloak%252Fkeycloak
+      - name: Keycloak P1 Plugin
+        repository: https://repo1.dso.mil/dsop/big-bang/p1-keycloak-plugin
+        approval: https://ironbank.dso.mil/repomap/details;registry1Path=big-bang%252Fp1-keycloak-plugin
 
     # Graduated: Links to required documentation
     documentation:
-    - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/charter/packages/keycloak/Architecture.md
-    - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/charter/BigBangPackages.md#keycloak
+    - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/understanding-bigbang/package-architecture/keycloak.md
+    - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/packages.md#security
     - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/guides/using-bigbang/default-credentials.md
-    - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/understanding-bigbang/licensing-expectations.md
-    - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/guides/prerequisites/minimum-hardware-requirements.md
+    - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/understanding-bigbang/licensing-model.md
+    - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/prerequisites/minimum-hardware-requirements.md
 
   # Name and date of required verifications (e.g. "John Doe, 7 Dec 2021")
   signOffs:
@@ -72,7 +73,7 @@ spec:
     sandboxVerification: Michael McLeroy, 13 Jul 2022
 
     # Incubating: Verification of requirements
-    incubatingVerification: ""
+    incubatingVerification: Michael McLeroy, 4 Jan 2023
 
     # Graduated: Verification of requirements
-    graduatedVerification: ""
+    graduatedVerification: Michael McLeroy, 4 Jan 2023
