--- a/projects/sandbox/apache-spark.yaml
+++ b/projects/sandbox/apache-spark.yaml
@@ -1,30 +1,29 @@
 apiVersion: bbtoc/v1alpha
 kind: Project
 metadata:
-  name: "Apache Spark"
+  name: "Apache Spark on Kubernetes Operator"
   vendor: "opensource"
-  description: "Apache Spark is a multi-language engine for executing data engineering, data science, and machine learning on single-node machines or clusters."
+  description: "Apache Spark is a multi-language engine for executing data engineering, data science, and machine learning on single-node machines or clusters.  Spark on Kubernetes Operator orchestrates Spark applications using Kubernetes scheduling."
   website:
-  - "https://spark.apache.org/"
-  sourceCode:
-  - "https://github.com/apache/spark"
   - "https://github.com/GoogleCloudPlatform/spark-on-k8s-operator"
+  sourceCode:
+  - "https://github.com/GoogleCloudPlatform/spark-on-k8s-operator"
+  - "https://github.com/apache/spark"
   license:
   - "Apache 2.0"
   maturityLevel: Sandbox
   contacts:
-  - name: "Lucas Rodriguez"
-    repo1user: "lucas.rodriguez"
-  - name: "TBD"
-    repo1user: "TBD"
+  - name: "Timothy Miller"
+    repo1user: "tmiller"
+  - name: "Robert Arencibia"
+    repo1user: "rarencibia"
 
 spec:
   packages:
-  - name: "Apache Spark"
-    repository: "https://repo.dso.mil/platform-one/big-bang/apps/sandbox/apache-spark"
+  - name: ""
+    repository: "https://repo.dso.mil/platform-one/big-bang/apps/sandbox/spark-on-k8s-operator"
   signOffs:
     # Sandbox: Verify required files (e.g. LICENSE, CODEOWNERS, CONTRIBUTING.md) in git repository
     requiredFiles: ""
     # Sandbox: Demonstratable product
     productDemonstration: ""
-
