--- a/projects/sandbox/external-secrets-operator.yaml
+++ b/projects/sandbox/external-secrets-operator.yaml
@@ -27,10 +27,12 @@ metadata:
   maturityLevel: Sandbox # Sandbox, Incubating, or Graduated
 
   # Sandbox: Points of contact for project (at least 2)
-  - name: ""
-    repo1user: ""
-  - name: ""
-    repo1user: ""
+  - name: "Jacob Kershaw"
+    repo1user: "@kershaw.jacob"
+  - name: "Andrew Kesterson"
+    repo1user: "@akesterson"
+  - name: "Daniel Chen"
+    repo1user: "@dchen"
 
 spec:
   # Sandbox: Package(s) contained in the product (e.g. operator and application).  Each package will have its own repository in repo1.
