--- a/projects/sandbox/external-secrets-operator.yaml
+++ b/projects/sandbox/external-secrets-operator.yaml
@@ -24,14 +24,15 @@ metadata:
   - "Apache License 2.0"
 
   # Maturity level of the package
-  maturityLevel: Sandbox # Sandbox, Incubating, or Graduated
+  maturityLevel: Incubating # Sandbox, Incubating, or Graduated
 
+  contacts:
   # Sandbox: Points of contact for project (at least 2)
-  - name: "Jacob Kershaw"
+  - name: Jacob Kershaw
     repo1user: "@kershaw.jacob"
-  - name: "Andrew Kesterson"
+  - name: Andrew Kesterson
     repo1user: "@akesterson"
-  - name: "Daniel Chen"
+  - name: Daniel Chen
     repo1user: "@dchen"
 
 spec:
@@ -46,25 +47,23 @@ spec:
     # Incubating: List of images contained in the package.
     images:
       # Incubating: Name of the image
-      - name: ""
-
-        # Incubating: Iron Bank approval request (https://repo1.dso.mil/dsop/<your project>/-/issues/1)
-        repository: ""
-
-        # Graduated: Iron Bank approval URL (https://ironbank.dso.mil/repomap/details;registry1Path=<your project path>)
-        approval: ""
+      - name: external-secrets
+        repository: registry1.dso.mil/ironbank/opensource/external-secrets/external-secrets
+        approval: https://ironbank.dso.mil/repomap/details;registry1Path=opensource%2Fexternal-secrets%2Fexternal-secrets
 
     # Graduated: Links to required documentation
-    documentation: []
+    # Package Architecture Documentation is WIP
+    documentation:
+    - https://repo1.dso.mil/big-bang/apps/sandbox/external-secrets/-/issues/24
 
   # Name and date of required verifications (e.g. "John Doe, 7 Dec 2021")
   signOffs:
 
     # Sandbox: Verification of requirements
-    sandboxVerification: ""
+    sandboxVerification: Christopher O'Connell, 24 June 2024
 
     # Incubating: Verification of requirements
-    incubatingVerification: ""
+    incubatingVerification: Christopher O'Connell, 24 June 2024
 
     # Graduated: Verification of requirements
     graduatedVerification: ""
