--- a/projects/sandbox/external-secrets-operator.yaml
+++ b/projects/sandbox/external-secrets-operator.yaml
@@ -52,9 +52,9 @@ spec:
         approval: https://ironbank.dso.mil/repomap/details;registry1Path=opensource%2Fexternal-secrets%2Fexternal-secrets
 
     # Graduated: Links to required documentation
-    # Package Architecture Documentation is WIP
-    documentation:
-    - https://repo1.dso.mil/big-bang/apps/sandbox/external-secrets/-/issues/24
+    # Package Architecture Documentation is WIP - https://repo1.dso.mil/big-bang/apps/sandbox/external-secrets/-/issues/24
+    documentation: []
+
 
   # Name and date of required verifications (e.g. "John Doe, 7 Dec 2021")
   signOffs:
