--- a/projects/sandbox/mimir.yaml
+++ b/projects/sandbox/mimir.yaml
@@ -30,6 +30,8 @@ metadata:
   contacts:
   - name: Kevin Scheunemann
     repo1user: '@kscheunemann'
+  - name: Krby Liu
+    repo1user: '@kliu'
   - name: Zach Callahan
     repo1user: '@zcallahan'
 
