Add sign-off by @camdon.cady

--- a/projects/sandbox/tetragon.yaml
+++ b/projects/sandbox/tetragon.yaml
@@ -56,7 +56,7 @@ spec:
   signOffs:
 
     # Sandbox: Verification of requirements
-    sandboxVerification: 
+    sandboxVerification: Camdon Cady, 1 Oct 2024
 
     # Incubating: Verification of requirements
     incubatingVerification: ""
